<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>navigator</name>
  <version>0.0.1</version>
  <description>Autonomous navigation node that avoids obstacles using sensor data</description>
  <maintainer email="fahimdayhan@gmail.com">Fahim Dayhan</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>mini_project_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
